trying to fix type-box word shift up before do a action

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+.hidden {
+    display: none;
+}
+
 /* App */
 body {
     font-family: 'Roboto-mono', monospace;
