--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -18,17 +18,28 @@
 }
 
 .logo {
-    font-size: 28px;
+    font-size: 32px;
     font-weight: bold;
     transition: 0.3s;
+    margin-bottom: 25px;
 }
 
 .menu {
     display: flex;
-    font-size: 1rem;
-    
-    a {
-        width: fit-content;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 30%;
+
+    & .button {
+        font-size: 25px;
         padding: 0.5rem;
+        display: flex;
+        align-items: center;
+        transition: .15s;
+        color: #DA0037;                                             //highlight color
+
+        &:hover {
+            color: #ededed;
+        }
     }
 }
